Ingest local JSON files, display index in Web UI
- The SeekStorm server now allows to ingest local data files in [JSON](https://en.wikipedia.org/wiki/JSON), [Newline-delimited JSON](https://github.com/ndjson/ndjson-spec) (ndjson), and [Concatenated JSON](https://en.wikipedia.org/wiki/JSON_streaming) format via console `ingest [data_filename] [api_key] [index_id]` command.
  The document ingestion is streamed without loading the whole document vector into memory to allow for unlimited file size while keeping RAM consumption low.
- ingest_json() is also available as public method in the SeekStorm library.
- The [Embedded web UI](https://github.com/SeekStorm/SeekStorm/blob/main/src/seekstorm_server#open-embedded-web-ui-in-browser) of SeekStorm multi-tenancy server now allows to search and display results from any index in your web browser without coding.
  The field names to display in the web UI can be automatically detected or pre-defined.
- seekstorm_server readme updated ([src/seekstorm_server/README.md](https://github.com/SeekStorm/SeekStorm/blob/main/src/seekstorm_server/README.md#command-line-parameters)).
- Optionally specify the default query type (Union/Interection) via REST API (Intersection is default if not specified).
- jQuery v3.3.1 updated to v3.7.1 (used in server web UI).

--- a/src/seekstorm_server/web/index.html
+++ b/src/seekstorm_server/web/index.html
@@ -9,7 +9,7 @@
 <link rel=icon type=image/png sizes=16x16 href=favicon-16x16.png>
 <link rel=stylesheet type=text/css media=screen href=css/flexboxgrid.min.css>
 <link rel=stylesheet type=text/css media=screen href=css/master.css />
-<script src=js/jquery-3.3.1.min.js></script>
+<script src=js/jquery-3.7.1.min.js></script>
 <script src=js/master.js></script>
 </head>
 <body>
@@ -22,7 +22,9 @@
 </div>
 <div style=color:#898992;font-style:normal;font-size:14px;padding-top:40px;padding-left:20px>
 SeekStorm v<span id=version></span>
-&nbsp;&nbsp;&nbsp;indexed documents:
+&nbsp;&nbsp;&nbsp;index:
+<span id=indexName style=color:green></span>
+&nbsp;&nbsp;&nbsp;documents:
 <span id=indexedDocs style=color:green></span>
 </div>
 <div class=col-xs-12>
