Web UI preview panel now always using 100% height
- In index_document skip tokenizing fields with !schema_field.indexed.
- New property SchemaField.field_id to indicate the field order in the schema map.
- In master.js, the fields in the schema map are now sorted by field_id to preserve the field order of the schema.json.
- In the Web UI, the preview panel is now always using 100% height, independent from the number of results in the result panel.
- See [CHANGELOG.md](https://github.com/SeekStorm/SeekStorm/blob/main/CHANGELOG.md) for details.

--- a/src/seekstorm_server/web/index.html
+++ b/src/seekstorm_server/web/index.html
@@ -53,7 +53,7 @@ SeekStorm v<span id=version></span>
 <a href=https://seekstorm.com/blog>Blog</a>
 <a href=https://twitter.com/seekstorm>Twitter</a>
 <a href=https://www.linkedin.com/company/seekstorm>LinkedIn</a>
-<span class="annot hideOnSlim">Â© 2024 SeekStorm</span>
+<span class="annot hideOnSlim">© 2024 SeekStorm</span>
 </div>
 </div>
 <div class=h100 id=landingMain style=display:none;background-color:white>
@@ -79,7 +79,7 @@ SeekStorm v<span id=version></span>
 <span id=stats><b id=from>#</b>-<b id=to>#</b> of <i id=count>#</i> results</span>
 </div>
 </div>
-<div class=row>
+<div class=row style=display:flex;align-self:stretch;height:100%>
 <div class="col-xs-4 col-xs-offset-2 expandOnSlim">
 <div class="row offsetOnLarge" id=contentBox>
 </div>
@@ -115,7 +115,7 @@ SeekStorm v<span id=version></span>
 <div>9</div>
 <div>10</div>
 <div class=action next=1>Next ></div>
-<span class="annot hideOnSlim">Â© 2024 SeekStorm</span>
+<span class="annot hideOnSlim">© 2024 SeekStorm</span>
 </div>
 </div>
 </body>
