Exception fixed if docker is run without -ti parameter

--- a/src/seekstorm_server/web/index.html
+++ b/src/seekstorm_server/web/index.html
@@ -47,7 +47,7 @@ SeekStorm v<span id=version></span>
 <div id=footerSecondary>
 <a href=https://github.com/SeekStorm/SeekStorm/blob/master/ARCHITECTURE.md>Technology</a>
 <a href=https://seekstorm.com/blog/sneak-peek-seekstorm-rust/>Benchmark</a>
-<a href=https://github.com/SeekStorm/SeekStorm/blob/master/src/seekstorm_server/test_api.rest style=color:#00a4f0>API</a>
+<a href=https://seekstorm.apidocumentation.com/reference style=color:#00a4f0>API</a>
 <a href=https://seekstorm.com/contact>Contact</a>
 <a href=https://github.com/SeekStorm/SeekStorm>GitHub</a>
 <a href=https://seekstorm.com/blog>Blog</a>
