Link to REST API documentation updated

--- a/src/seekstorm_server/web/index.html
+++ b/src/seekstorm_server/web/index.html
@@ -21,7 +21,7 @@
 <div style=width:50%;height:50%>
 <p style=font-size:16px><b>Welcome to the SeekStorm 🌱 open-source ⚡ sub-millisecond 🔍 search server in 🦀 Rust!</b></p>
 <p>&nbsp;</p>
-<p>Please create an <b>API key</b> and <b>index</b> first via <b>REST API</b>: See <a href=https://seekstorm.apidocumentation.com>REST API documentation</a>.</p>
+<p>Please create an <b>API key</b> and <b>index</b> first via <b>REST API</b>: See <a href=https://seekstorm.apidocumentation.com/reference>REST API documentation</a>.</p>
 <p>You find the required <b>master API key</b> in the <b>console</b> or in the <b>docker desktop</b> / view details / logs.</p>
 <p>Alternatively, you may create a demo API key also with the <b>search server console</b> command <b>"create"</b>.</p>
 <p>&nbsp;</p>
@@ -63,7 +63,7 @@ SeekStorm v<span id=version></span>
 <div id=footerSecondary>
 <a href=https://github.com/SeekStorm/SeekStorm/blob/master/ARCHITECTURE.md>Technology</a>
 <a href=https://seekstorm.com/blog/sneak-peek-seekstorm-rust/>Benchmark</a>
-<a href=https://seekstorm.apidocumentation.com style=color:#00a4f0>API</a>
+<a href=https://seekstorm.apidocumentation.com/reference style=color:#00a4f0>API</a>
 <a href=https://seekstorm.com/contact>Contact</a>
 <a href=https://github.com/SeekStorm/SeekStorm>GitHub</a>
 <a href=https://seekstorm.com/blog>Blog</a>
