--- a/src/seekstorm_server/web/index.html
+++ b/src/seekstorm_server/web/index.html
@@ -12,6 +12,7 @@
 <link rel=stylesheet type=text/css media=screen href=css/bootstrap.histogram.slider.css>
 <link rel=stylesheet type=text/css media=screen href=css/histogram.slider.css>
 <script src=js/jquery-3.7.1.min.js></script>
+<script src=js/autocomplete.js></script>
 <script src=js/master.js></script>
 <script src=js/bootstrap.histogram.slider.js></script>
 <script src=js/bootstrap-slider.js></script>
@@ -49,8 +50,10 @@ SeekStorm v<span id=version></span>
 </div>
 <div class=col-xs-12>
 <div class="row searchBar">
-<div class=col-xs-10>
+<div class=col-xs-10 style=position:relative>
 <input autocomplete=off autocorrect=off autocapitalize=off spellcheck=false type=text name=search id=searchInput>
+<div id=suggestionsMain style=display:none>
+</div>
 </div>
 <div class="col-xs-2 searchBtn">
 <svg xmlns=http://www.w3.org/2000/svg width=30 height=30 viewBox="0 -4 24 24"><path fill=#fff d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
@@ -69,7 +72,7 @@ SeekStorm v<span id=version></span>
 <a href=https://seekstorm.com/blog>Blog</a>
 <a href=https://twitter.com/seekstorm>Twitter</a>
 <a href=https://www.linkedin.com/company/seekstorm>LinkedIn</a>
-<span class="annot hideOnSlim">© 2024 SeekStorm</span>
+<span class="annot hideOnSlim">© 2026 SeekStorm</span>
 </div>
 </div>
 <div class=h100 id=landingMain style=display:none;background-color:white>
@@ -131,7 +134,7 @@ SeekStorm v<span id=version></span>
 <div>9</div>
 <div>10</div>
 <div class=action next=1>Next ></div>
-<span class="annot hideOnSlim">© 2024 SeekStorm</span>
+<span class="annot hideOnSlim">© 2026 SeekStorm</span>
 </div>
 </div>
 </body>
